# api-confini-amministrativi

./: Makefile  README.md  generate-geojson.py  index.html  pyproject.toml  shape-to-geojson.py  sources.yaml
.circleci/: config.yml
2020-01-01/: index.html
2020-01-01/2020-01-01/: index.html
2020-01-01/2020-01-01/generalizzata/: index.html
2020-01-01/generalizzata/comune/: 001001.geojson  001002.geojson  001003.geojson  001004.geojson  001006.geojson  001007.geojson  001008.geojson  001010.geojson  001011.geojson  001012.geojson  001014.geojson  001015.geojson  001016.geojson  001022.geojson  001025.geojson  001029.geojson  001030.geojson  001033.geojson  001034.geojson  001036.geojson  001037.geojson  001042.geojson  001045.geojson  001046.geojson  001047.geojson  001049.geojson  001051.geojson  001052.geojson  001057.geojson  001059.geojson  001060.geojson  001061.geojson  001065.geojson  001066.geojson  001068.geojson  001069.geojson  001070.geojson  001071.geojson  001072.geojson  001073.geojson  (+3983 more)
2020-01-01/generalizzata/regione/: 10.geojson  11.geojson  12.geojson  13.geojson  14.geojson  15.geojson  17.geojson  18.geojson  19.geojson  3.geojson  5.geojson  9.geojson
2020-01-01/generalizzata/ripartizione/: 1.geojson  2.geojson  4.geojson
2020-01-01/generalizzata/ripartizione-geografica/: 1.geojson  2.geojson  3.geojson  4.geojson  5.geojson
2020-01-01/generalizzata/unita-territoriale-sovracomunale/: 102.geojson  103.geojson  11.geojson  110.geojson  13.geojson  14.geojson  19.geojson  20.geojson  21.geojson  (+47 more)
2020-01-01/non-generalizzata/: index.html
(+3950 files in other folders)
